# the_witness_blockchain_base_IoT_data_protection_system

./: .gitignore  README.md  README_DEV.MD  deploy.md  docker-compose.yml  docker-publish-backend  local_dev.md  mac.py  package-lock.json  protocol.py  pyproject.toml
.github/workflows/: docker-publish-backend.yml  docker-publish-frontend.yml  docker-publish-frotend.yml
Mobile_app_frontend/: App.tsx  app.json  babel.config.js  package-lock.json  package.json
Mobile_app_frontend/android/: settings.gradle
Mobile_app_frontend/android/app/: build.gradle
Mobile_app_frontend/graphql/: queries.graphql  schema.graphql
Mobile_app_frontend/ios/: Podfile
Mobile_app_frontend/ios/hello_world/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
Mobile_app_frontend/ios/hello_world.xcodeproj/: project.pbxproj
Mobile_app_frontend/ios/hello_worldTests/: hello_worldTests.m
Mobile_app_frontend/src/: GraphQL.tsx  config.json  input.tsx  inspect.tsx  notices.tsx  reports.tsx  styles.tsx  tunnel_config.json  useRollups.ts  vouchers.tsx
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  fly.toml  manage.py  pyproject.toml  requirements.txt  sve.py  tox.ini  witness.db
backend/bridge/: urls.py  views.py
backend/dashboard/: models.py  serializers.py  urls.py  views.py
backend/django_cartesi_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/iot_data_generator/: apps.py  env_var_managment.py  models.py  protocol.py  task.py  test_has_fu.py
backend/iot_registration/: apps.py  urls.py  views.py
backend/test_api/: views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py
backend/utils/: dapp.json  protocol.py  sc_interface.py
backend/utils/abi/: InputBox.json
cartesi_backend/: Dockerfile  README.md  client.py  dapp.py  data_processing.py  docker-compose.override.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  sender.py  test_client.py  tox.ini
cartesi_backend/deployments/localhost/: Authority.json  Bitmask.json  CartesiDAppFactory.json  CartesiMathV2.json  DAppAddressRelay.json  ERC1155BatchPortal.json  ERC1155SinglePortal.json  ERC20Portal.json  ERC721Portal.json  EtherPortal.json  History.json  InputBox.json  MerkleV2.json  UnrolledCordic.json  dapp.json
cartesi_backend/utils/: data_processing.py  protocol.py  witness.db
cartesi_frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  Dockerfile.dev  eslint.config.js  fly.toml  hex_reader.js  ilija.js  package-lock.json  package.json  proba.js  vite.config.js
cartesi_frontend/src/: App.jsx  AutoContext.jsx  PrivateRoute.jsx  axios.js  utils.jsx
cartesi_frontend/src/components/: Copyright.jsx  forgetPassword.jsx  logout.jsx  postLoading.jsx  signUp.jsx  (+5 more)
(+17 files in other folders)
