[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ilija <ilijapet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
django = "^5.0.6"
djangorestframework = "^3.15.1"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"
pycryptodome = "^3.20.0"
apscheduler = "^3.10.4"
kolo = "^2.27.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
