[tool.poetry]
name = "cartesi-backend"
version = "0.1.0"
description = "Cartesi backend"
authors = ["ilija <ilijapet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
python-cartesi = "^0.1.1"
web3 = "^6.19.0"
sqlalchemy = "^2.0.31"
httpx = "^0.27.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
